Fix sku should not wrap

--- a/web/app/themes/gds/resources/styles/blocks/woocommerce-product-sku.scss
+++ b/web/app/themes/gds/resources/styles/blocks/woocommerce-product-sku.scss
@@ -2,4 +2,5 @@
   --block-gutter: var(--block-gutter-xs);
 
   font-size: inherit;
+  white-space: nowrap;
 }
